fixed boss z-index, written 'use strict' in every file

--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,8 @@ button:hover
 #bossup
 {
     position: absolute;
+    left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background-color: red;
